[tool.poetry]
name = "weboptout"
description = "Checks the Copyright information of online works and their conditions of use."
version = "dev"
authors = ["Alex J. Champandard <445208+alexjc@users.noreply.github.com>"]
repository = "https://github.com/alexjc/weboptout"
license = "MIT and UNLICENSED"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
packages = [
    { include = "weboptout", from = "src" },
]
include = [
    "data/tos.jsonl",
]

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = ">=3.8"
langdetect = ">=1.0.9"
beautifulsoup4 = ">=4.12"
selenium = { version = ">=4.7", optional = true }

[tool.poetry.extras]
webdriver = ["selenium"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
hypothesis = ">=6.0.0"
pytest-cov = ">=3.0.0"

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"